--- a/win32.vcxproj
+++ b/win32.vcxproj
@@ -26,6 +26,7 @@
     <WindowsTargetPlatformVersion>$(LatestTargetPlatformVersion)</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
+  <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.props" />
   <PropertyGroup Label="Configuration">
   <ConfigurationType>Application</ConfigurationType>
   <CharacterSet>Unicode</CharacterSet>
@@ -112,6 +113,7 @@
   </ItemDefinitionGroup>
   <ItemGroup />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
+  <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
 </Project>
