--- a/WDK.NT.NASM.vcxproj
+++ b/WDK.NT.NASM.vcxproj
@@ -23,6 +23,7 @@
     <WindowsTargetPlatformVersion>$(LatestTargetPlatformVersion)</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
+  <Import Project="$(SolutionDir)\MSBuild\nasm.props" />
   <PropertyGroup Label="Configuration">
     <TargetVersion>Windows7</TargetVersion>
     <PlatformToolset>WindowsKernelModeDriver10.0</PlatformToolset>
@@ -48,8 +49,15 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
     </ClCompile>
+    <NASM Condition="'$(Platform)'=='Win32'">
+      <Outputswitch>0</Outputswitch>
+    </NASM>
+    <NASM Condition="'$(Platform)'=='x64'">
+      <Outputswitch>1</Outputswitch>
+    </NASM>
   </ItemDefinitionGroup>
   <ItemGroup />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
+  <Import Project="$(SolutionDir)\MSBuild\nasm.targets" />
   <ImportGroup Label="ExtensionTargets" />
 </Project>
